--- a/biglobby/index.html
+++ b/biglobby/index.html
@@ -9,7 +9,7 @@ body {
 <body>
 
 
-<h1 style="color:magenta;font-family:Comic Sans MS;"> 1. Download <a style="color:magenta;font-family:Comic Sans MS;" href="https://github.com/polarathene/biglobby/releases"</a> </h1>
+<h1 style="color:magenta;font-family:Comic Sans MS;"> 1. Download <a style="color:magenta;font-family:Comic Sans MS;" href="https://github.com/polarathene/biglobby/releases">https://github.com/polarathene/biglobby/releases</a> </h1>
 <h1> <a style="color:magenta;font-family:Comic Sans MS;" href="https://modworkshop.net/mydownloads.php?action=view_down&did=197">https://modworkshop.net/mydownloads.php?action=view_down&did=197 </h1>
 <h1> <a style="color:magenta;font-family:Comic Sans MS;" href="https://github.com/JamesWilko/Payday-2-BLT/releases/download/1.07/Payday2BLT_r11_r5.zip">https://github.com/JamesWilko/Payday-2-BLT/releases/download/1.07/Payday2BLT_r11_r5.zip</a> </h1>
 <h1 style="color:green;font-family:Comic Sans MS;"> 2. Extract the zip files, and open PDBundleModPatcher.exe in the Bundle Modder folder. </h1>
