--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </center>
 
   <div id="contact">
-    Email: dev@ajay.app
+    Email: <a href="mailto:dev@ajay.app">dev@ajay.app</a>
   </div>
 
 </body>
