--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -15,7 +15,7 @@
         <meta http-equiv='expires' content='0'>
         <meta http-equiv='pragma' content='no-cache'>
         <meta http-equiv='Cache-Control' content='no-cache, must revalidate'>
-        <link rel="stylesheet" type="text/css" href="http://web.archive.org/web/20171030194516cs_/https://yesnomaybe.info/css/yes-no-maybe.css">
+        <link rel="stylesheet" type="text/css" href="https://web.archive.org/web/20171030194516cs_/https://yesnomaybe.info/css/yes-no-maybe.css">
         <link rel="alternate" type="application/rss+xml" title="Yes, No, Better" href="http://yesnomaybe.info/yesnomaybe.xml">
     </head>
     <body class="maybe", id="background">
