--- a/yesnobetter.html
+++ b/yesnobetter.html
@@ -37,7 +37,7 @@
             <br>Based on yesnomaybe.info</center>
         </div>
 
-        <script type="text/javascript", src="http://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.0/seedrandom.min.js">
+        <script type="text/javascript", src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.4.0/seedrandom.min.js">
         </script>
 
 		<script type="text/javascript">
