--- a/fordify/index.html
+++ b/fordify/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 
-  <input placeholder="Enter the normal text here..." id="inputbox" height="1000" width="1000"></input>
+  <textarea placeholder="Enter the normal text here..." id="inputbox" height="1000" width="1000"></textarea>
   
   <button onclick="test()">Convert</button>
   
