Fixed broken link

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <p>
         I am currently working on a game called Voster Coaster, which will be a roller coaster building and tycoon game for VR headsets.
-        This game is open source and available on GitHub at <a href="https://github.com/ajayyy/VosterCoasterVR</a>">https://github.com/ajayyy/VosterCoasterVR</a>
+        This game is open source and available on GitHub at <a href="https://github.com/ajayyy/VosterCoasterVR">https://github.com/ajayyy/VosterCoasterVR</a>
       </p>
 
       <!-- Recent Posts -->
