--- a/index.html
+++ b/index.html
@@ -65,9 +65,10 @@
       <p>
         I am a member of <a href="http://lakeeffectrobotics.ca/">Lake Effect Robotics</a>, a <i>FIRST</i> robotics team who won at the Detroit world championships in 2018.
         I work on Android apps for keeping track, analysing, and distributing other teams' preformances. The app uses bluetooth to communitcate with a server device.
-        
-        https://github.com/LakeEffectRobotics/LakeEffectScoutingApp
-        https://github.com/LakeEffectRobotics/LakeEffectScoutingServerApp
+        </br></br>
+        <a href="https://github.com/LakeEffectRobotics/LakeEffectScoutingApp">https://github.com/LakeEffectRobotics/LakeEffectScoutingApp</a>
+        </br>      
+        <a href="https://github.com/LakeEffectRobotics/LakeEffectScoutingServerApp">ttps://github.com/LakeEffectRobotics/LakeEffectScoutingServerApp</a>
       </p>
       
       <p>
@@ -94,7 +95,7 @@
     </div>
 
     <div class="smalllink">
-      <a href="blog.html"> See all of my development blog </a>
+      <a href="blog.html"> See all of my development blog</a>
     </div>
 
 
