--- a/scouting-privacy.html
+++ b/scouting-privacy.html
@@ -34,7 +34,7 @@
 
 <p>Ajay Ramachandran ("us", "we", or "our") hosts the 2708 Scouting App (the "Service").</p>
 
-<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data. Our Privacy Policy  for 2708 Scouting App is managed through <a href="https://www.freeprivacypolicy.com/free-privacy-policy-generator.php">Free Privacy Policy</a>.</p>
+<p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
 <h1><b>We do not collect any of your data. This app uses no internet access. There are no ads and there is no analytics.</b></h1>
 
