--- a/scouting-privacy.html
+++ b/scouting-privacy.html
@@ -32,7 +32,7 @@
 <p>Effective date: October 01, 2018</p>
 
 
-<p>Ajay Ramachandran ("us", "we", or "our") hosts the 2708 Scouting App (the "Service").</p>
+<p>Lake Effect Robotics ("us", "we", or "our") operates the 2708 Scouting App (the "Service").</p>
 
 <p>This page informs you of our policies regarding the collection, use, and disclosure of personal data when you use our Service and the choices you have associated with that data.</p>
 
