Updated to use new profile picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div id="title">
-    <img src="profilepic.jpg" height="80" class="profilepic"/>
+    <img src="newprofilepic.jpg" height="80" class="profilepic"/>
       Ajay Ramachandran
   </div>
 
