--- a/index.html
+++ b/index.html
@@ -90,12 +90,13 @@
 
       </div>
 
+    </center>
 
     <div id="recentPostBody">
-      <center> <p> Loading... </p> </center>
+      <p> Loading... </p>
     </div>
 
-    </center>
+    
 
     <div class="smalllink">
       <a href="blog.html"> See all of my development blog</a>
