--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 
   <a href="#/home">
     <div id="title">
-      <img src="profilepic.jpg" height="80" class="profilepic"/>
+      <img src="newprofilepic.jpg" height="80" class="profilepic"/>
       Ajay Ramachandran
     </div>
   </a>
