--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,10 @@
       <div id="recentPostTitle">
 
       </div>
+	  
+	  <div id="recentPostDate">
+
+      </div>
 
 
 	  <div id="recentPostBody">
