Added id to latest posts title

--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,7 @@
 
   <center>
 
-      <div class="subtitle">
+      <div id="latestPostTitle" class="subtitle">
         Latest Posts
       </div>
 
