Added a logo to the last paragraph and edited the text a little.

--- a/index.html
+++ b/index.html
@@ -81,12 +81,20 @@
       This game is open source and available on GitHub at <a href="https://github.com/ajayyy/VosterCoasterVR">https://github.com/ajayyy/VosterCoasterVR</a>
   </p>
 
-  <p>
-      I have many projects on my <a href="https://github.com/ajayyy">GitHub Profile</a>. I also participate in the tri-annual Ludum Dare game making competiton.
-      I have participated in 14 events since August 2014. You <a href="https://ldjam.com/users/ajayajayaj/">see these here</a> as well as the older projects on <a href="http://ludumdare.com/compo/author/ajayajayaj/">their legacy site</a>.
-  </p>
+  <p class="projectPreview">
+      <span class="projectPreviewImage">
+        <img src="LD.png"/>   
+      </span>
 
-  <p>
+      I also participate in the tri-annual Ludum Dare game making competiton.
+      I have participated in 14 events since August 2014. You <a href="https://ldjam.com/users/ajayajayaj/">see these here</a> as well as the older projects on <a href="http://ludumdare.com/compo/author/ajayajayaj/">their legacy site</a>.
+
+      </br></br>  
+
+      I have many projects not listed here on my <a href="https://github.com/ajayyy">GitHub Profile</a> as well. 
+
+      <br/><br/>
+
       Below are posts from my developement blog. 
       In these posts, I describe work I have done on some of my projects. 
       You can view my entire development blog <a href="https://ajay.app/blog.html">here</a>.
