Added more info about me.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
       About Me
   </div>
 
+
+  <p>
+      I enjoying working on programming projects. I recently graduated highschool and will be entering the Software Engineering program at the University of Ottawa in the fall.
+      The main languages are work with are <b>Java, C#, JavaScript and Python</b>.
+      Lately, I have been working on more JavaScript projects with Node.js.
+  </p>
+
   <p class="projectPreview">
     <span class="projectPreviewImage">
         <img src="https://github.com/ajayyy/SponsorBlock/raw/master/icons/LogoSponsorBlocker256px.png"/>
