--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="https://user-images.githubusercontent.com/12688112/61835678-d07a4e00-ae4a-11e9-871b-167c4ef972e4.png"/>
       </span>
 
-      I am a former member of <a href="http://lakeeffectrobotics.ca/">Lake Effect Robotics</a>, a <i>FIRST</i> robotics team who won at the Detroit world championships in 2018.
+      I am a former member of <a href="http://lakeeffectrobotics.ca/">Lake Effect Robotics</a>, a <i>FIRST</i> robotics team who won at the Detroit world championship in 2018.
       I created Android apps for keeping track, analysing, and distributing other teams' performances. The app uses bluetooth to communitcate with a server device.
       </br></br>
       <a href="https://github.com/LakeEffectRobotics/LakeEffectScoutingApp">https://github.com/LakeEffectRobotics/LakeEffectScoutingApp</a>
