--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </span>
 
       Last summer I started work on a game called Voster Coaster, which is a roller coaster building game for VR headsets.
-      So far, the game soley supports a VR track creation system using a spline based system.
+      So far, the game solely supports a VR track creation system using a spline based system.
       You can read more about this spline system <a href="https://ajay.app/blog.html#building-roller-coasters-complete">here</a>, <a href="https://ajay.app/blog.html#building-roller-coasters-or-smooth-full-tracks">here</a>, and <a href="https://ajay.app/blog.html#building-hills-or-building-roller-coasters-or-voster-coaster-or-vr-game-programming">here</a>.
       You can read more about my development of Voster Coaster <a href="https://ajay.app/blog.html#/tag=vostercoaster">here</a>.
       This game is open source and available on GitHub at <a href="https://github.com/ajayyy/VosterCoasterVR">https://github.com/ajayyy/VosterCoasterVR</a>
