--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
       You can view my entire development blog <a href="https://ajay.app/blog.html">here</a>.
   </p>
 
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Homepage -->
+  <ins class="adsbygoogle"
+       style="display:block;zoom: 50%;"
+       data-ad-client="ca-pub-8505654302097602"
+       data-ad-slot="6932911184"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <!-- Recent Posts -->
   <div class="subtitle">
       <a href="blog.html"> Latest From My Development Blog </a>
