--- a/index.html
+++ b/index.html
@@ -115,10 +115,12 @@
       You can view my entire development blog <a href="https://ajay.app/blog.html">here</a>.
   </p>
 
+  <br/>
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Homepage -->
   <ins class="adsbygoogle"
-       style="display:block;zoom: 50%;"
+       style="display:block;"
        data-ad-client="ca-pub-8505654302097602"
        data-ad-slot="6932911184"
        data-ad-format="auto"
@@ -126,6 +128,8 @@
   <script>
        (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
+
+  <br/>
 
   <!-- Recent Posts -->
   <div class="subtitle">
