--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.4.1/markdown-it.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   <script src="latestPost.js"></script>
+  <script src="getSponsorBlockStats.js"></script>
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <script>
@@ -66,6 +67,16 @@
     Users submit when sponsor happen to the extension, and the extension automatically skips sponsors it knows about. 
     It also features an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution algorithm</a>.
     More information and links to the source code can be found <a href="https://sponsor.ajay.app">here</a>.
+
+    <br/>
+    <br/>
+
+    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="hoursSaved"></b> hours of people's lives.
+   
+    <br/>
+    <br/>
+
+    More stats can be found  <a href="https://sponsor.ajay.app/stats">here</a>.
   </p>
 
   <p class="projectPreview">
