--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <br/>
     <br/>
 
-    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="hoursSaved"></b> hours of people's lives.
+    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="daysSaved"></b> days of people's lives.
    
     <br/>
     <br/>
