--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <link href="styles.css" rel="stylesheet"/>
   <link rel="stylesheet" href="dracula.css">
 
-  <script src="https://github.com/steemit/steem-js/releases/download/v0.6.4/steem.min.js"></script>
+  <script src="./scrpts/steem.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.4.1/markdown-it.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   <script src="blog.js"></script>
