--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <p>
-      I enjoying working on programming projects. I recently graduated highschool and will be entering the Software Engineering program at the University of Ottawa in the fall.
+      I enjoying working on programming projects. I am currently enrolled in Software Engineering at the University of Ottawa.
       The main languages I work with are <b>Java, C#, JavaScript and Python</b>.
       Lately, I have been working on more JavaScript projects with Node.js.
   </p>
