--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <br/>
     <br/>
 
-    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="daysSaved"></b> days of people's lives. Check out <a href="stats">the leaderboard</a>.
+    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="daysSaved"></b> days of people's lives. Check out <a href="//sponsor.ajay.app/stats">the leaderboard</a>.
   </p>
 
   <p class="projectPreview">
