--- a/404.html
+++ b/404.html
@@ -1,7 +1,32 @@
 
-<h1 align="center" style="color:red;" >This is not what your looking for...</h1>
-<h1 align="center" style="color:orange;" >You should probably go back home to the main site...</h1>
-<h2 align="center" style="color:green;" >Or not...</h2>
-<h2 align="center" style="color:grey;" >Nah, do it...</h2>
-<h3 align="center" style="color:blue;" >You have reached a 404</h3>
+<head>
+  <title> Ajay Ramachandran </title>
 
+  <link href="styles.css" rel="stylesheet"/>
+
+</head>
+
+<body>
+
+  <div id="title">
+    <img src="https://ajay.app/newprofilepic.jpg" height="80" class="profilepic"/>
+      Ajay Ramachandran
+  </div>
+
+  <center>
+
+    <div class="subtitle">
+      404: File Not Found
+    </div>
+
+    <div id="links">
+      <p style="text-align: center;"> 
+        You can see my homepage here: <a href="https://ajay.app/">https://ajay.app/</a>
+	    </p>
+      <p style="text-align: center;"> 
+        If you are looking for SponsorBlock, check here: <a href="https://sponsor.ajay.app/">https://sponsor.ajay.app/</a>
+	    </p>
+	</div>
+  </center>
+
+</body>
