Added SponsorBlock link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <p class="projectPreview">
     <span class="projectPreviewImage">
-        <img src="https://github.com/ajayyy/SponsorBlock/raw/master/icons/LogoSponsorBlocker256px.png"/>
+        <a href="https://sponsor.ajay.app"><img src="https://github.com/ajayyy/SponsorBlock/raw/master/icons/LogoSponsorBlocker256px.png"/></a>
     </span>
 
     I am currently working on a browser extension called SponsorBlock.
