--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title> Ajay Ramachandran </title>
+  <link rel="icon" href="newprofilepic.jpg">
   <link href="styles.css" rel="stylesheet"/>
   <link rel="stylesheet" href="dracula.css">
   <script src="./scripts/steem.min.js"></script>
