Link to new blog

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <!-- Recent Posts -->
   <div class="subtitle">
-      <a href="blog.html"> Latest From My Development Blog </a>
+      <a href="https://blog.ajay.app"> Latest From My Development Blog </a>
       <br/>
       <br/>
   </div>
@@ -145,6 +145,6 @@
 </center>
 
 <div class="smalllink">
-  <a href="blog.html"> See all of my development blog</a>
+  <a href="https://blog.ajay.app"> See all of my development blog</a>
 </div>
 </body>
