--- a/blog.html
+++ b/blog.html
@@ -1,13 +1,9 @@
 <head>
 
-  <title> Ajay Ramachandran </title>
+  <title> Ajay Ramachandran's Blog </title>
 
   <link href="styles.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="dracula.css">
 
-  <script src="./scripts/steem.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.4.1/markdown-it.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
   <script src="blog.js"></script>
 
 </head>
@@ -24,21 +20,8 @@
   <center>
 
       <div id="latestPostTitle" class="subtitle">
-        Latest Posts
+        Redirecting to the new blog
       </div>
-
-      <div id="recentPostTitle">
-
-      </div>
-	  
-	  <div id="recentPostDate">
-
-      </div>
-
-
-	  <div id="recentPostBody">
-		<center> <p> Loading... </p> </center>
-	  </div>
 	
   </center>
 
