--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     I am currently working on a browser extension called SponsorBlock.
     SponsorBlock is a crowdsourced extension to block sponsor segments of YouTube videos. 
     Users submit when sponsor happen to the extension, and the extension automatically skips sponsors it knows about. 
-    It also features an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution algorithm</a>.
+    It also features an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution</a>.
     More information and links to the source code can be found <a href="https://sponsor.ajay.app">here</a>.
 
     <br/>
