removed extra symbol

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   </div>
 
   <div id="recentPostTitle">
-    Categories - SponsorBlock<
+    Categories - SponsorBlock
   </div>
 
   <div id="recentPostDate">
