Switch to years

--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
     </span>
 
     I am currently working on a browser extension called SponsorBlock.
-    SponsorBlock is a crowdsourced extension to block sponsor segments of YouTube videos. 
-    Users submit when sponsor happen to the extension, and the extension automatically skips sponsors it knows about. 
+    SponsorBlock is a crowdsourced extension to skip sponsors, intros, follow reminders and other annoying segments in YouTube videos. 
+    Users submit when the segment happens to the extension, and the extension automatically skips segments it knows about. 
     It also features an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution</a>.
     More information and links to the source code can be found <a href="https://sponsor.ajay.app">here</a>.
 
     <br/>
     <br/>
 
-    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="daysSaved"></b> days of people's lives. Check out <a href="//sponsor.ajay.app/stats">the leaderboard</a>.
+    There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="yearsSaved"></b> years of people's lives. Check out <a href="//sponsor.ajay.app/stats">the leaderboard</a>.
   </p>
 
   <p class="projectPreview">
