--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <div id="contact">
       Email: <a href="mailto:dev@ajay.app">dev@ajay.app</a>
       <br/>
+      Matrix: <a href="https://matrix.to/#/@ajay:ajay.app">@ajay:ajay.app</a>
+      <br/>
       Discord: Ajay#1922
   </div>
 
