--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 
   <p>
       I enjoying working on programming projects. I am currently enrolled in Software Engineering at the University of Ottawa.
-      The main languages I work with are <b>Java, C#, JavaScript and Python</b>.
-      Lately, I have been working on more JavaScript projects with Node.js.
+      The main languages I am working with right now are <b>Java, TypeScript, and C++</b>, but I also have worked with C# and Python in the past.
   </p>
 
   <p class="projectPreview">
@@ -65,7 +64,7 @@
     I am currently working on a browser extension called SponsorBlock.
     SponsorBlock is a crowdsourced extension to skip sponsors, intros, follow reminders and other annoying segments in YouTube videos. 
     Users submit when the segment happens to the extension, and the extension automatically skips segments it knows about. 
-    It also features an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution</a>.
+    It uses an upvote/downvote system with a <a href="https://ajay.app/blog.html#voting-and-pseudo-randomness-or-sponsorblock-or-youtube-sponsorship-segment-blocker">weighted random based distribution</a>.
     More information and links to the source code can be found <a href="https://sponsor.ajay.app">here</a>.
 
     <br/>
