--- a/index.html
+++ b/index.html
@@ -173,4 +173,9 @@
 <div class="smalllink">
   <a href="https://blog.ajay.app"> See all of my development blog</a>
 </div>
+
+</br>
+<p>Some icons made by <a href="https://www.flaticon.com/authors/icongeek26" title="Icongeek26">Icongeek26</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></p>
+
 </body>
+
