Add rocketry info and looking for work

--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
       I enjoy working on programming projects. I am currently enrolled in Software Engineering at the University of Ottawa.
       The main languages I am working with right now are <b>Java, TypeScript, and C++</b>, but I also have worked with C# and Python in the past.
   </p>
+  
+   <p>
+      I am looking for a internship in September to December 2021.
+  </p>
 
   <p class="projectPreview">
     <span class="projectPreviewImage">
@@ -69,6 +73,15 @@
     <br/>
 
     There are currently <b id="totalUsers"></b> users who have submitted <b id="totalSubmissions"></b> sponsors and saved a total of <b id="yearsSaved"></b> years of people's lives. Check out <a href="//sponsor.ajay.app/stats">the leaderboard</a>.
+  </p>
+  
+  <p class="projectPreview">
+      <span class="projectPreviewImage">
+          <img src="https://avatars.githubusercontent.com/u/22135165"/>
+      </span>
+
+      I am a member of uORocketry, an engineering team at the University of Ottawa. 
+      I created a <a href="https://github.com/uorocketry/RocketGroundStation2020">Java Ground Station</a> and work on the C++ <a href="https://github.com/uorocketry/rocket-code-2020">flight computer software</a>.
   </p>
 
   <p class="projectPreview">
