Fix typo and update scouting db viewer link

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       </br>      
       <a href="https://github.com/LakeEffectRobotics/LakeEffectScoutingServerApp">https://github.com/LakeEffectRobotics/LakeEffectScoutingServerApp</a>
       </br></br>  
-      I also built an online database viewing system that got live updates from out data and allowed us to access it over the internet. It is available <a href="https://scout.ajay.app">online here</a>.
+      I also built an online database viewing system that got live updates from our data and allowed us to access it over the internet. It is available <a href="https://scout.ajay.app#188">online here</a>.
       The source code is available at <a href=https://github.com/ajayyy/LakeEffectScoutingSummary>https://github.com/ajayyy/LakeEffectScoutingSummary</a>
   </p>
 
