--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </span>
 
       I am a member of uORocketry, an engineering team at the University of Ottawa. 
-      I created a Java <a href="https://github.com/uorocketry/RocketGroundStation2020">Ground Station</a> and work on the C++ <a href="https://github.com/uorocketry/rocket-code-2020">flight computer software</a>.
+      I created a Java <a href="https://github.com/uorocketry/RocketGroundStation2020">ground station</a> and work on the C++ <a href="https://github.com/uorocketry/rocket-code-2020">flight computer software</a>.
   </p>
 
   <p class="projectPreview">
