Add resume link

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </p>
   
    <p>
-      I am looking for a internship in September to December 2021.
+     I am looking for a internship in September to December 2021. <a href="/ResumeActive.pdf">Resume</a>.
   </p>
 
   <p class="projectPreview">
