--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       Matrix: <a href="https://matrix.to/#/@ajay:ajay.app">@ajay:ajay.app</a>
       <br/>
       Discord: Ajay#1922
+      <br/>
+      <span style="font-size: 11px;">For questions about SponsorBlock, please ask <a href="https://discord.gg/sponsorblock">here</a></span>
   </div>
 
   <!-- About Me -->
