--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </p>
   
    <p>
-     I am looking for a internship in September to December 2021. <a href="/ResumeActive.pdf">Resume</a>.
+     I am looking for a internship in Summer 2022 (May - August). <a href="/ResumeActive.pdf">Resume</a>.
   </p>
 
   <p class="projectPreview">
