--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
   <p>
       I enjoy working on programming projects. I am currently enrolled in Software Engineering at the University of Ottawa.
-      The main languages I am working with right now are <b>Java, TypeScript, and C++</b>, but I also have worked with C# and Python in the past.
+      The main languages I am working with right now are <b>TypeScript, C++, and Java</b>, but I also have worked with C# and Python in the past.
   </p>
   
    <p>
