--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <link rel="icon" href="newprofilepic.jpg">
   <link href="styles.css" rel="stylesheet"/>
   <link rel="stylesheet" href="dracula.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/8.4.1/markdown-it.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script src="scripts/markdown-it.js"></script>
+  <script src="scripts/highlight.js"></script>
   <script src="getSponsorBlockStats.js"></script>
 
 
