--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </span>
 
       I am a former member of <a href="http://lakeeffectrobotics.ca/">Lake Effect Robotics</a>, a <i>FIRST</i> robotics team who won at the Detroit world championship in 2018.
-      I created Android apps for keeping track, analysing, and distributing other teams' performances. The app uses bluetooth to communitcate with a server device.
+      I created Android apps for keeping track, analysing, and distributing other teams' performances. The app uses bluetooth to communicate with a server device.
       </br></br>
       <a href="https://github.com/LakeEffectRobotics/LakeEffectScoutingApp">https://github.com/LakeEffectRobotics/LakeEffectScoutingApp</a>
       </br>      
