Update discord link

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <br/>
       Matrix: <a href="https://matrix.to/#/@ajay:ajay.app">@ajay:ajay.app</a>
       <br/>
-      Discord: Ajay#1922
+      Discord: <a href="https://discordapp.com/users/197867122825756672">@ajay.app</a>
       <br/>
-      <span style="font-size: 11px;">For questions about SponsorBlock, please ask <a href="https://discord.gg/sponsorblock">here</a></span>
+      <span style="font-size: 20px;">For questions about SponsorBlock, please ask <a href="https://discord.gg/sponsorblock">here</a></span>
   </div>
 
   <!-- About Me -->
